(ui) Fix text input padding on IE10+ (#734)

--- a/src/app/styles/forms.scss
+++ b/src/app/styles/forms.scss
@@ -14,6 +14,11 @@ label {
     color: $lighter-grey;
     padding: 1.25rem 1rem;
 
+    @media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {
+      /* IE10+ specific style */
+      padding: 10px 20px;
+    }
+
     &::placeholder {
       color: $light-grey !important;
     }
